<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddNewExpensesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/linearLayoutOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewTitleDate"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="18dp"
                            android:text="@string/textView_data"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="35dp">

                        <TextView
                            android:id="@+id/textViewDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackground"
                            android:ems="10"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20dp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:background="@color/colorGray" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/linearLayoutTwo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@+id/linearLayoutOne"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorBackgroundTwo"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/textView_category"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:id="@+id/textViewCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="13dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="41dp"
                        android:background="@color/colorGray" />
                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@+id/linearLayoutTwo"
                android:layout_margin="10dp"
                android:background="@color/colorBackgroundTwo"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/textView_sum"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editTextAddSum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="60dp"
                    android:hint="@string/editText_add_sum_hint"
                    android:inputType="numberDecimal" />


            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>