<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_btn_ADD"
        android:icon="@drawable/ic_check_black_24dp"
        android:orderInCategory="100"
        android:title="ADD"
        app:showAsAction="ifRoom" />

</menu>